Closed Bug 1675876 Opened 5 years ago Closed 4 years ago

MOZ_RELEASE_ASSERT(mBuffer != nullptr) Crash in [@ mozilla::wr::RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL]

Categories

(Core :: Graphics: WebRender, defect)

x86
Windows 10
defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox84 --- disabled
firefox85 --- disabled
firefox86 --- fixed
firefox87 --- fixed

People

(Reporter: cpeterson, Assigned: sotaro)

References

(Blocks 2 open bugs)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Maybe Fission related. (DOMFissionEnabled=1)

I hit this crash today. Looks like my crash report is the first and only one for this signature.

Crash report: https://crash-stats.mozilla.org/report/index/9100617b-834a-404e-b0bf-aa2710201106

MOZ_CRASH Reason: MOZ_RELEASE_ASSERT(mBuffer != nullptr)

Top 10 frames of crashing thread:

0 xul.dll mozilla::wr::RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL gfx/webrender_bindings/RenderBufferTextureHostSWGL.cpp:23
1 xul.dll mozilla::layers::BufferTextureHost::CreateRenderTexture gfx/layers/composite/TextureHost.cpp:684
2 xul.dll mozilla::layers::TextureHost::EnsureRenderTexture gfx/layers/composite/TextureHost.cpp:520
3 xul.dll mozilla::layers::WebRenderTextureHost::GetExternalImageKey gfx/layers/wr/WebRenderTextureHost.cpp:61
4 xul.dll mozilla::layers::WebRenderTextureHost::PrepareForUse gfx/layers/wr/WebRenderTextureHost.cpp:168
5 xul.dll mozilla::layers::CompositableParentManager::ReceiveCompositableUpdate gfx/layers/ipc/CompositableTransactionParent.cpp:170
6 xul.dll mozilla::layers::CompositableParentManager::ReceiveCompositableUpdate gfx/layers/ipc/CompositableTransactionParent.cpp:74
7 xul.dll mozilla::layers::WebRenderBridgeParent::ProcessWebRenderParentCommands gfx/layers/wr/WebRenderBridgeParent.cpp:1412
8 xul.dll mozilla::layers::WebRenderBridgeParent::ProcessDisplayListData gfx/layers/wr/WebRenderBridgeParent.cpp:1112
9 xul.dll mozilla::layers::WebRenderBridgeParent::RecvSetDisplayList gfx/layers/wr/WebRenderBridgeParent.cpp:1165

Marking as S3 since we aren't shipping SW-WR yet.

Blocks: sw-wr
Severity: -- → S3

All crashe reports had "Failed to create a valid ShmemTextureHost" gfxCriticalNote. It might be related.

The ShmemTextureHost failure happened on 32bit Win PCs.

RenderBufferTextureHost and RenderExternalTextureHost handle the ShmemTextureHost failure by returning InvalidToWrExternalImage().

Assignee: nobody → sotaro.ikeda.g
Status: NEW → ASSIGNED
Pushed by sikeda.birchill@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6e2dfe331b79 Make RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL() fallible r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

Should we uplift this fix to beta?

Flags: needinfo?(sotaro.ikeda.g)

Yes, it seems necessary. Bug 1689186 enabled Software WebRender on beta.

Comment on attachment 9199964 [details]
Bug 1675876 - Make RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL() fallible

Beta/Release Uplift Approval Request

  • User impact if declined: GPU process crash happens when ShmemTextureHost failed to get valid Shmen with Software WebRender on Windows.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): The patch removes MOZ_RELEASE_ASSERT() and WebRender already has a mechanism to handle an invalid RenderTextureHost rendering.
  • String changes made/needed: None
Flags: needinfo?(sotaro.ikeda.g)
Attachment #9199964 - Flags: approval-mozilla-beta?

Comment on attachment 9199964 [details]
Bug 1675876 - Make RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL() fallible

Approved for 86 beta 6, thanks.

Attachment #9199964 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: