Bug 1675876 - Make RenderBufferTextureHostSWGL::RenderBufferTextureHostSWGL() fallible. r=mattwoodrow, a=pascalc

When ShmemTextureHost does not have valid Shmem, RenderBufferTextureHostSWGL::mBuffer is nullptr. RenderBufferTextureHost and RenderExternalTextureHost handle it as fallible.

Differential Revision: https://phabricator.services.mozilla.com/D103427